--- a/templates/layout/basic.html
+++ b/templates/layout/basic.html
@@ -18,20 +18,23 @@
         </header>
         <div class="row">
             <ul class="col nav justify-content-end border">
-                <li class="nav-item"><a class="nav-link" href="#">Регистрация</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Профиль</a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="#">Moи объявления</a>
-                        <a class="dropdown-item" href="#">Изменить личные данные</a>
-                        <a class="dropdown-item" href="#">Изменить пароль</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Выйти</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Удалить</a>
-                    </div>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="#">Bxoд</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'main:register' %}">Регистрация</a></li>
+                {% if user.is_authenticated %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Профиль</a>
+                        <div class="dropdown-menu dropdown-menu-right">
+                            <a class="dropdown-item" href="{% url 'main:profile' %}">Moи объявления</a>
+                            <a class="dropdown-item" href="{% url 'main:profile_change'%}">Изменить личные данные</a>
+                            <a class="dropdown-item" href="{% url 'main:password_change' %}">Изменить пароль</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'main:logout' %}">Выйти</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'main:profile_delete' %}">Удалить</a>
+                        </div>
+                    </li>
+                {% else %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'main:login' %}">Вход</a></li>
+                {% endif %}
             </ul>
         </div>
         <div class="row">
