--- a/static/main/style.css
+++ b/static/main/style.css
@@ -4,3 +4,9 @@ header h1 {
 .root {
     font-size: larger;
 }
+img.main-image {
+    width: ЗООрх;
+}
+img.additional-image {
+    width: 180px;
+}
