--- a/templates/main/profile.html
+++ b/templates/main/profile.html
@@ -1,4 +1,7 @@
 {% extends "layout/basic.html" %}
+{% load thumbnail %}
+{% load static %}
+{% load bootstrap4 %}
 {% block title %}Профиль пользователя{% endblock %}
 {% block content %}
     <h2>Профиль пользователя {{ user.username }}</h2>
@@ -8,4 +11,32 @@
         <p>3дравствуите!</p>
     {% endif %}
     <h3>Ваши объявления</h3>
+    <h2 class="mb-2">{{ rubric }}</h2>
+    {% if bbs %}
+    <ul class="list-unstyled">
+        {% for bb in bbs %}
+        <li class="media my-5 p-3 border">
+            {% url 'main:profile_bb_detail' pk=bb.pk as url %}
+            <a href="{{ url }}{{ all }}">
+            {% if bb.image %}
+            <img class="mr-3" src="{% thumbnail bb.image 'default' %}">
+            {% else %}
+            <img class="mr-3" src="{% static 'main/empty.jpg' %}">
+            {% endif %}
+            </a>
+            <div class="media-body">
+                <h3><a href="{{ url }}{{ all }}">{{ bb.title }}</a></h3>
+                <div>{{ bb.content }}</div>
+                <p class="text-right font-weight-bold">{{ bb.price }} руб.</p>
+                <p class="text-right font-italic">{{ bb.created_at }}</p>
+                <p class="text-right mt-2">
+                    <a href="{% url 'main:profile_bb_change' pk=bb.pk %}">Исправить</a>
+                    <a href="{% url 'main:profile_bb_delete' pk=bb.pk %}">Удалить</a>
+                </p>
+            </div>
+        </li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    <p><a href="{% url 'main:profile_bb_add' %}">Добавить объявление</a></p>
 {% endblock %}
